--- a/config/default.yaml
+++ b/config/default.yaml
@@ -7,8 +7,10 @@ train:
   num_workers: 32
   batch_size: 16
   optimizer: 'adam'
+  epochs: 800
   adam:
-    lr: 0.0001
+    init_lr: 0.0001
+    final_lr: 0.00001
     beta1: 0.5
     beta2: 0.9
 ---
